# faster-graphql-tools

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
src/: lib.rs
