
[package]
authors = ["Dave Lu <davelu7@gmail.com>"]
edition = "2021"
name = "faster_graphql_tools"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.5"
napi-derive = "3.3"
graphql-parser = "0.4"

[build-dependencies]
napi-build = "2.3"

[profile.release]
lto = true
strip = "symbols"
